--- a/src/main/resources/sample-application.properties
+++ b/src/main/resources/sample-application.properties
@@ -3,7 +3,7 @@ spring.application.name=pos-system
 server.port=5000
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.url=jdbc:mysql://localhost:3306/pos
 spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
